force-app/main/default/objects/Work_Order_Attached_Image__c/Work_Order_Attached_Image__c.object-meta.xml
<CustomObject>
    <description>Handles image attachments for Service Reports</description>
    <label>Work Order Attached Image</label>
    <nameField>
        <displayFormat>WOIMG-{0000000}</displayFormat>
        <label>Work Order Attached Image Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Work Order Attached Images</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>