force-app/main/default/objects/Work_Order_Attached_Image__c/fields/Image_RTF__c.field-meta.xml
<CustomField>
    <fullName>Image_RTF__c</fullName>
    <label>Image</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>