force-app/main/default/objects/Work_Order_Attached_Image__c/fields/Original_image_URL__c.field-meta.xml
<CustomField>
    <fullName>Original_image_URL__c</fullName>
    <label>Original image URL</label>
    <length>65536</length>
    <type>LongTextArea</type>
</CustomField>